# VitIA

./: .gitignore  refactor_frontend.py  requirements.txt
alembic/: env.py
alembic/versions/: 16b0328b6044_add_variedad_sugerida.py  81012d914d39_add_anotacionesimagenes_table.py  e4b5c6d7e8f9_add_expert_validation_module.py
backend/: drop_ubicacion_column.py  migrate_user_db.py  pyproject.toml  request_debug.txt  test_db.py  test_db2.py  test_premium.py
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/core/: config.py  database.py  health.py  models.py  security.py
backend/app/ia/: model_loader.py
backend/app/modules/auth/: router.py  schemas.py
backend/app/modules/biblioteca/: crud.py  ml_router.py  oiv_engine.py  router.py  schemas.py  variedades.json
backend/app/modules/chat/: crud.py  router.py  schemas.py
backend/app/modules/coleccion/: crud.py  router.py  schemas.py
backend/app/modules/experto/: crud.py  router.py  schemas.py
backend/app/modules/foro/: crud.py  router.py  schemas.py
backend/app/modules/usuarios/: crud.py  router.py  schemas.py
backend/app/routes/: routes_auth.py  routes_coleccion.py  routes_comentarios.py  routes_publicacion.py
backend/app/services/: imagekit_service.py  push_notifications.py
frontend/: .gitignore  analysis_output.txt  analysis_results.txt  analyze_output.txt  pubspec.yaml  test_out.txt  test_out_utf8.txt
frontend/android/app/: build.gradle.kts  google-services.json
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/lib/: main.dart
(+81 files in other folders)
