[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend base para Viñas AI"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
supabase = "^2.5.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
imagekitio = "^3.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.0.0"}
pydantic-settings = "^2.0.0"
ultralytics = "^8.0.0"
python-multipart = "^0.0.9"
pillow = "^10.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.0.0"
pytest-cov = "^4.0.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["./app", "."]
